Add exec env support
